Changes according to comments